--- a/client/src/pages/Head2Head.css
+++ b/client/src/pages/Head2Head.css
@@ -3,3 +3,9 @@
     border-style: solid;
     border-color: pink;
 }
+
+.result {
+    border: 4px;
+    border-style: solid;
+    border-color: pink;
+}
