--- a/client/src/pages/Five4Five.css
+++ b/client/src/pages/Five4Five.css
@@ -1,4 +1,4 @@
-.Selected {
+/* .Selected {
     background-color: #f5f5f5;
     border: 1px solid #e5e5e5;
     border-radius: 5px;
@@ -8,4 +8,4 @@
     height: 100%;
 }
 
-.Songs {}
+.Songs {} */
